fixed visible menu on desktop

--- a/hamburger.css
+++ b/hamburger.css
@@ -117,3 +117,7 @@
 #op:not(:checked) ~ .overlay-hugeinc nav ul {
   transform: translateY(25%) rotateX(-35deg);
 }
+ 
+.overlay-hugeinc nav ul {
+  font-size: 52px;
+}
